  * Change dpkg-deb conffile name length warning into an error, as dpkg will
    reject those packages at install time anyway.
  * Unify and clarify dpkg-deb and dpkg conffile name length error message.
    Closes: #108196
  * Add new start-stop-daemon --pid option. Closes: #253265
  * Mention Multi-Arch: no value in man pages. Closes: #732648

  [ Updated dpkg translations ]
  * Swedish (Peter Krefting).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Thu, 12 Dec 2013 08:59:54 +0100

dpkg (1.17.5) unstable; urgency=low

  [ Guillem Jover ]
  * Switch non-tty output to be line buffered by default, and set it to fully
    buffered only for programs with precious and abundant output, not just
    progress reporting output (i.e. dpkg-query). This was causing out-of-order
    error and debug messages in relation to normal progress reporting, which
    could be very confusing. Regression introduced in dpkg 1.17.2.
  * Fix segfault in update-alternatives when adding or renaming slaves for
    an existing alternative. Regression introduced in dpkg 1.17.2.
    Closes: #731710
  * Fix dpkg-maintscript-helper symlink_to_dir and dir_to_symlink commands:
    - Always run postinst code regardless of prior-version, as the package
      might have been never configured before.
    - Be more strict when checking the expected state of paths.
    - Rename subcommand shell code to check-files-ownership.
    - Change dir_to_symlink switch code to use a staging empty directory,
      to avoid dpkg removing files from other packages, when removing the
      package old files during upgrade.
    - Bump minimal version in man page to 1.17.5.
    Closes: #731730
  * Mention gpg2 too as one of the default sign commands in dpkg-buildpackage.

  [ Updated dpkg translations ]