@@ -16,6 +16,8 @@ dpkg (1.17.6) UNRELEASED; urgency=low
     Closes: #108196
   * Add new start-stop-daemon --pid option. Closes: #253265
   * Mention Multi-Arch: no value in man pages. Closes: #732648
+  * Correctly hyphenate binary-only and source-only in dpkg-buildpackage
+    output messages.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
